@@ -111,7 +111,7 @@ packages:
 #   written to /etc/fstab.
 # - '/dev' can be ommitted for device names that begin with: xvd, sd, hd, vd
 # - if an entry does not have all 6 fields, they will be filled in
-#   from the following: [ None, None, "auto", "defaults,nobootwait", "0", "2" ]
+#   with values from 'mount_default_fields' below.
 #
 # Note, that you should set 'nobootwait' (see man fstab) for volumes that may
 # not be attached at instance boot (or reboot)
@@ -121,6 +121,11 @@ mounts:
  - [ sdc, /opt/data ]
  - [ xvdh, /opt/data, "auto", "defaults,nobootwait", "0", "0" ]
  - [ dd, /dev/zero ]
+
+# mount_default_fields
+# These values are used to fill in any entries in 'mounts' that are not
+# complete.  This must be an array, and must have 7 fields.
+mount_default_fields: [ None, None, "auto", "defaults,nobootwait", "0", "2" ]
 
 # add each entry to ~/.ssh/authorized_keys for the configured user
 ssh_authorized_keys:
